<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:background="@drawable/sunny_sky"
    android:backgroundTint="#7C000305"
    android:backgroundTintMode="src_over"
    android:fadingEdge="vertical"
    android:fadingEdgeLength="100dp"
    android:requiresFadingEdge="horizontal|vertical"
    android:scaleType="fitXY"
    tools:context="weathered.CurrentLocationFragment">

    <RelativeLayout
        android:id="@+id/frag_contents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cityTextView"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="100dp"
            android:backgroundTint="#0288D1"
            android:backgroundTintMode="src_in"
            android:elevation="24dp"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/cityName"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FAF9F9"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cityTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="130dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="#0288D1"
            android:backgroundTintMode="src_in"
            android:gravity="center|center_horizontal|top"
            android:text="@string/weatherDescription"
            android:textAlignment="center"
            android:textColor="#FAF7F7"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="135dp"
            android:layout_marginTop="175dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:backgroundTintMode="src_in"
            android:gravity="bottom|center_horizontal"
            android:text="@string/temp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#F8F7F7"
            android:textSize="55sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/currHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/temperatureTextView"
            android:layout_marginStart="132dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="-37dp"
            android:text="H:00"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/currLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/temperatureTextView"
            android:layout_marginStart="215dp"
            android:layout_marginBottom="-37dp"
            android:text="L:00"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/hourlyCardView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="310dp"
            android:background="@color/cardview_shadow_end_color"
            app:cardBackgroundColor="#20F6F5F5">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_hourly"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:elevation="24dp"
                android:orientation="horizontal" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/dailyCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hourlyCardView"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="#20F6F5F5">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_daily"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/black"
                android:elevation="24dp"
                android:orientation="vertical" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/placesButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_menu"
            android:focusable="true"
            app:elevation="24dp" />

    </RelativeLayout>

</FrameLayout>